--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -162,6 +162,7 @@ h1{
   text-align: center;
   color: lavender;
   font-size: 2.2em;
+  font-size: 5em
 }
 
 h2{
@@ -176,8 +177,8 @@ h2{
 
 .inputs{
   position: relative;
-  width: 260px;
-  width: 400px;
+  /*width: 260px;
+  width: 400px;*/
   text-align: center;
 }
 
